# colrz_py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/colrz/: __init__.py  colrz.py
tests/: tests.py
