# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "colrz"
version = "0.0.1"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
description = "It's a set of functions and constants that provides basic coloring for your terminal app."
authors = [
  { name="UnnamedXAer", email="unnamedxaer.git@gmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]


[project.urls]
Homepage = "https://github.com/unnamedxaer/colrz_py"
Issues = "https://github.com/unnamedxaer/colrz_py/issues"
